[package]
name = "sms_tigron"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10.10", features = ["json"] }
serde_json = "*"
futures = "*"
tokio = { version = "0.2", features = ["full"] }
xml-rs = "*"
regex = "1"
